# voyapp

./: README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 34b58fd92f19_create_users_trips_days_stops.py
backend/app/: config.py  database.py  main.py  schema.py
backend/app/auth/: security.py
backend/app/graphql/: context.py  mutations.py  queries.py
backend/app/graphql/types/: auth.py  day.py  stop.py  trip.py  user.py
backend/app/models/: __init__.py  day.py  stop.py  trip.py  user.py
backend/tests/: conftest.py  test_auth.py  test_days.py  test_stops.py  test_trips.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/apollo/: client.js
frontend/src/components/: AddStopForm.jsx  AuthVisualPanel.jsx  DayCard.jsx  NewTripForm.jsx  TripCard.jsx
frontend/src/graphql/: mutations.js  queries.js
frontend/src/hooks/: useAuth.jsx
frontend/src/pages/: AuthPage.jsx  DashboardPage.jsx  TripDetailPage.jsx
